# CAR-PRICE-PREDICTION-WITH-MACHINE-LEARNING

./: Car_Price_Pred_Web_App.py  Car_price_Pred_model.ipynb  README.md  main.py  pyproject.toml  requirements.txt  rf_model.pkl
Api/: main.py
Data/: cleaned_car_data.csv
Models/: linear_regression_model.pkl  random_forest_model.pkl  xgboost_model.pkl
Notebooks/: data_clean.ipynb  data_visualization.ipynb  model_training.ipynb
Streamlit_app/: Car_Price_Pred_Web_App.py  app.py
